# motion

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml  release.yml  test.yml
apps/motion-ui/: .npmrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/motion-ui/src/: main.ts  motion-engine.d.ts
apps/motion-ui/src/editor/: EditorApp.ts  demo.ts
apps/motion-ui/src/lib/: defaultBrand.ts  documentState.ts  engine.ts  renderer-webgl2.ts  renderer-webgpu.ts  renderer.ts  types.ts
apps/motion-ui/src/lib/gpu/: glyph-atlas.ts  shaders.ts  texture-cache.ts
apps/motion-ui/src/presenter/: PresenterApp.ts  PresenterViewApp.ts  runtime.ts
apps/motion-ui/test/: demo-acceptance.test.js  presenter-runtime.test.js  renderer.test.js
crates/motion-cli/: Cargo.toml
crates/motion-cli/src/: main.rs
crates/motion-core/: Cargo.toml
crates/motion-core/src/: animation.rs  brand.rs  bundle.rs  command.rs  document.rs  engine.rs  layout.rs  lib.rs  node.rs  preflight.rs  scene.rs  templates.rs  tokens.rs
crates/motion-render/: Cargo.toml
crates/motion-render/src/: builder.rs  lib.rs  material.rs  passes.rs  render_tree.rs
crates/motion-wasm/: Cargo.toml
crates/motion-wasm/src/: lib.rs
docs/: 01_product_vision.md  02_functional_specification.md  03_architecture_plan.md  04_brand_tokens_and_packaging.md  05_ai_and_templates_plan.md  06_mvp_roadmap.md  07_open_questions.md  README.md
templates/: README.md
templates/brands/example-brand/: example-brand.motionbrand.json  manifest.json  tokens.json
templates/brands/example-brand/licenses/: lato-license.json
templates/components/: schema.json
templates/components/AnnotatedChart/: component.json
templates/components/BeforeAfter/: component.json
templates/components/ExecutiveSummary/: component.json
templates/components/KpiHighlight/: component.json
templates/components/SectionIntro/: component.json
templates/components/SimpleArchitectureDiagram/: component.json
templates/components/TitleReveal/: component.json
