[workspace]
resolver = "2"
members = [
    "crates/motion-core",
    "crates/motion-render",
    "crates/motion-wasm",
    "crates/motion-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/florianwolz/motion"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.17", features = ["v4", "serde", "js"] }
