[package]
name = "motion-cli"
description = "Command-line tool for validation, export, testing, and package build"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "motion"
path = "src/main.rs"

[dependencies]
motion-core = { path = "../motion-core" }
clap = { version = "4.5", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
