[package]
name = "motion-core"
description = "Document model, scene graph, tokens, commands, layout, and animation engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
