[package]
name = "motion-core"
description = "Document model, scene graph, tokens, commands, layout, and animation engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22.1"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.11.0"
thiserror.workspace = true
uuid.workspace = true
