[package]
name = "motion-wasm"
description = "wasm-bindgen bindings and browser API boundary"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
motion-core = { path = "../motion-core" }
motion-render = { path = "../motion-render" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "GpuDevice",
    "GpuAdapter",
    "Navigator",
    "Gpu",
    "Performance",
    "BroadcastChannel",
    "MessageEvent",
]
